<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_awiskar_tech"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/black"
        android:title="Awiskar Tech" />

    <item
        android:id="@+id/navigation_lead"
        android:icon="@drawable/ic_lead"
        android:iconTint="@color/black"
        android:title="@string/lead" />

    <item
        android:id="@+id/navigation_work_update"
        android:icon="@drawable/ic_work"
        android:iconTint="@color/black"
        android:title="@string/work_update" />

    <item
        android:id="@+id/navigation_request"
        android:icon="@drawable/ic_request"
        android:iconTint="@color/black"
        android:title="@string/request" />

    <item
        android:id="@+id/navigation_price"
        android:icon="@drawable/ic_profile"
        android:iconTint="@color/black"

        android:title="Profile" />

</menu>