<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.myapp.dailywork.fragment.LeadFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:background="@color/background">

      <ImageView
          android:layout_width="match_parent"
          android:layout_height="180dp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:padding="20dp"
          android:layout_marginTop="10dp"
          android:background="@drawable/back" />
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:textSize="21sp"
          android:textStyle="bold"
          android:layout_marginTop="30dp"
          android:layout_marginRight="12dp"
          android:layout_marginLeft="12dp"
          android:justificationMode="inter_word"
          android:text="@string/tech"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/white"

          android:layout_marginLeft="12dp"
           android:layout_marginRight="12dp"
           android:textSize="24sp"
           android:textStyle="bold"
           android:text="@string/instructions"
           />
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:textSize="21sp"
          android:layout_marginLeft="12dp"
          android:layout_marginRight="12dp"
          android:justificationMode="inter_word"
          android:textStyle="bold"
          android:text="@string/one"/>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          android:layout_marginRight="12dp"
          android:layout_marginLeft="12dp"
          android:textSize="21sp"
          android:justificationMode="inter_word"
          android:textStyle="bold"
          android:text="@string/two"/>

   <TextView
       android:layout_width="match_parent"
       android:layout_height="45dp"
       android:text="SUBMIT YOUR LEAD"
       android:id="@+id/submit_lead"
       android:gravity="center"
       android:layout_margin="15dp"
       android:background="@drawable/button_back"
       android:textStyle="bold"
       android:textColor="@color/white"/>
   </LinearLayout>


</FrameLayout>