<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343534"
    android:orientation="vertical"
    tools:context="com.myapp.dailywork.SubmitLeadActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
       >
        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="25dp"
            android:layout_marginLeft="5dp"
            android:layout_height="25dp"

            android:background="@drawable/ic_back_arrow"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lead_form"
            android:textSize="25sp"
       android:layout_marginLeft="20dp"


            android:textColor="@color/white"/>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"

        android:layout_marginRight="10dp"
        android:hint="Date"

        android:textColorHint="@color/white"
        app:boxStrokeColor="#64DD17"
        app:boxStrokeWidth="1dp">

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:inputType="date"

            android:letterSpacing="0.025"
            android:maxLength="10"
            android:padding="15dp"

            android:text=""
            android:textColor="#64DD17"
            android:textColorHint="@color/black"
            android:textSize="17sp" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:hint="@string/employee_intern_name"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"

        android:textColorHint="@color/white"
        app:boxStrokeColor="#64DD17"
        app:boxStrokeWidth="1dp">

        <EditText
            android:id="@+id/employeeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:inputType="textPersonName"

            android:letterSpacing="0.025"

            android:padding="15dp"

            android:text=""
            android:textColor="#64DD17"
            android:textColorHint="@color/black"
            android:textSize="17sp" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:hint="@string/lead_name"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        android:textColorHint="@color/white"
        app:boxStrokeColor="#64DD17"
        app:boxStrokeWidth="1dp">

        <EditText
            android:id="@+id/leadName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:inputType="text"

            android:letterSpacing="0.025"

            android:padding="15dp"

            android:text=""
            android:textColor="#64DD17"
            android:textColorHint="@color/black"
            android:textSize="17sp" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:hint="@string/mobile_no"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        android:textColorHint="@color/white"
        app:boxStrokeColor="#64DD17"
        app:boxStrokeWidth="1dp">

        <EditText
            android:id="@+id/mobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:inputType="phone"

            android:letterSpacing="0.025"
            android:maxLength="10"
            android:padding="15dp"

            android:text=""
            android:textColor="#64DD17"
            android:textColorHint="@color/black"
            android:textSize="17sp" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:hint="@string/email_id"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        android:textColorHint="@color/white"
        app:boxStrokeColor="#64DD17"
        app:boxStrokeWidth="1dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:inputType="textEmailAddress"

            android:letterSpacing="0.025"
            android:maxLength="40"
            android:padding="15dp"

            android:text=""
            android:textColor="#64DD17"
            android:textColorHint="@color/black"
            android:textSize="17sp" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:hint="products/Services"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        android:textColorHint="@color/white"
        app:boxStrokeColor="#64DD17"
        app:boxStrokeWidth="1dp">

        <EditText
            android:id="@+id/product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:inputType="text"

            android:letterSpacing="0.025"

            android:padding="15dp"

            android:text=""
            android:textColor="#64DD17"
            android:textColorHint="@color/black"
            android:textSize="17sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:hint="@string/budget"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        android:textColorHint="@color/white"
        app:boxStrokeColor="#64DD17"
        app:boxStrokeWidth="1dp">

        <EditText
            android:id="@+id/budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:inputType="number"


            android:letterSpacing="0.025"

            android:padding="15dp"

            android:text=""
            android:textColor="#64DD17"
            android:textColorHint="@color/black"
            android:textSize="17sp" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/submitBtn"
        android:text="SUBMIT"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_margin="15dp"
        android:background="@drawable/submit_btn"/>


</LinearLayout>